Se agrega cabecera footer terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>                
                 <p>suscribte y dale like</p>
             </div>
+            <div=""footer>Hecho con amor a platzi &lt;3 </div>
         </div>
     </body>
 </html>
